added heading and paragraph

--- a/upload.html
+++ b/upload.html
@@ -6,6 +6,10 @@
     <title>Practicing Github</title>
 </head>
 <body>
-    
+    <h2>Practicing Git after a long time</h2>
+
+    <div style="background-color: lightskyblue;">
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Itaque nesciunt unde doloribus repellat a rem, laborum quisquam reprehenderit fugiat ipsam cumque necessitatibus, aspernatur voluptas atque perferendis in quaerat eaque totam.</p>
+    </div>
 </body>
 </html>
